# Projet2A_Template

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Classe_UML_a_verifie.md  LICENSE  README.md  README.students.md  Schema_tables.md  __main__.py  diagram_classe.md  diagram_tables.md  diagram_utilisation.md  essai.ipynb  extensions.txt  pyproject.toml  requirements.txt  simulated_data.xlsx
point_hebdo/: 2024.09.12-semaine1.md  2024.09.19-semaine2.md
src/DAO/: Database.py  MovieMaker_dao.py  Movie_dao.py  comment_dao.py  db_connection.py  follow_dao  follow_dao.py  genre_dao.py  known_for_dao.py  link_movie_genre_dao.py  link_movie_movie_collection_dao.py  movie _dao.py  movie_collection_dao.py  movie_dao.py  movie_maker_dao.py  rating_dao  rating_dao.py  recommend.py  recommend_dao.py  singleton.py  tables_creation.py  user_dao.py  user_favorites.py  user_favorites_dao.py  user_follow.py  user_follow_dao.py  user_movie_collection_dao.py
src/Database/: Database.py
src/Interface/: API.py  interface.py
src/Interface1/: API.py
src/Model/: ConnectedUser.py  Genre.py  Movie.py  MovieCollection  MovieMaker.py  User.py  api_user.py  comment.py  connected_user.py  film.py  jwt_response.py  movie.py  movie_collection.py  movie_maker.py  (+2 more)
suivi/: 2024.09.12-semaine1.md  2024.09.19-semaine2.md  2024.09.26-semaine3  2024.09.26-semaine3.md  2024.09.27-semaine3.md  2024.10.03-semaine4.md  2024.10.10-semaine5.md  2024.10.17 - semaine6.md  2024.10.24-semaine7  2024.10.24-semaine7.md  2024.11.07-semaine8.md  2024.11.14-semaine9.md  2024.11.21-semaine10.md
tests/: conftest.py
(+60 files in other folders)
